@@ -423,34 +423,6 @@ clipper_builtin_saveregs ()
   set_mem_alias_set (mem, set);
   emit_move_insn (mem, gen_rtx_REG (DFmode, 17));
 
-  if (current_function_check_memory_usage)
-    {
-      emit_library_call (chkr_set_right_libfunc, 1, VOIDmode, 3,
-			 f0_addr, ptr_mode,
-			 GEN_INT (GET_MODE_SIZE (DFmode)),
-			 TYPE_MODE (sizetype),
-			 GEN_INT (MEMORY_USE_RW),
-			 TYPE_MODE (integer_type_node));
-      emit_library_call (chkr_set_right_libfunc, 1, VOIDmode, 3,
-			 f1_addr, ptr_mode,
-			 GEN_INT (GET_MODE_SIZE (DFmode)),
-			 TYPE_MODE (sizetype),
-			 GEN_INT (MEMORY_USE_RW), 
-			 TYPE_MODE (integer_type_node));
-      emit_library_call (chkr_set_right_libfunc, 1, VOIDmode, 3,
-			 r0_addr, ptr_mode,
-			 GEN_INT (GET_MODE_SIZE (SImode)),
-			 TYPE_MODE (sizetype),
-			 GEN_INT (MEMORY_USE_RW),
-			 TYPE_MODE (integer_type_node));
-      emit_library_call (chkr_set_right_libfunc, 1, VOIDmode, 3,
-			 r1_addr, ptr_mode,
-			 GEN_INT (GET_MODE_SIZE (SImode)),
-			 TYPE_MODE (sizetype),
-			 GEN_INT (MEMORY_USE_RW),
-			 TYPE_MODE (integer_type_node));
-    }
-
   return addr;
 }
 
